# material-food-manager

./: .gitignore  LICENSE  README.md  food_list.py  gui.py  material_list.py  pyproject.toml  requirements.txt  utils.py
src/: main.py
